tree-sitter-wheeler/grammar.js
// Editor grammar for Wheeler's accepted source profile; the compiler remains authoritative.
/// <reference types="tree-sitter-cli/dsl" />
// @ts-check

module.exports = grammar({
  name: 'wheeler',

  extras: $ => [/[\s\uFEFF\u2060\u200B]/, $.line_comment, $.block_comment],
  word: $ => $._identifier_word,
  // Later punctuation distinguishes an inverse from a name or nominal type.
  conflicts: $ => [[$.reverse_statement, $.identifier]],

  rules: {
    source_file: $ => seq(
      optional($.module_declaration),
      repeat($.import_declaration),
      $.class_declaration,
    ),

    module_declaration: $ => seq('module', $.qualified_identifier, ';'),
    import_declaration: $ => seq('import', $.qualified_identifier, ';'),
    qualified_identifier: $ => seq($.identifier, repeat(seq('.', $.identifier))),

    class_declaration: $ => seq(
      optional('public'),
      field('domain', $.computation_domain),
      'class',
      field('name', $.identifier),
      field('body', $.class_body),
    ),

    computation_domain: _ => choice('classical', 'quantum', 'hybrid'),
    class_body: $ => seq('{', repeat($.member_declaration), '}'),
    member_declaration: $ => seq(
      repeat($.visibility_modifier),
      choice(
        $.record_declaration,
        $.variant_declaration,
        $.enum_declaration,
        $.constant_declaration,
        $.theorem_declaration,
        $.state_declaration,
        $.qreg_declaration,
        $.method_declaration,
      ),
    ),

    record_declaration: $ => seq(
      'record',
      field('name', $.identifier),
      '(',
      $.record_component,
      repeat(seq(',', $.record_component)),
      ')',
      '{',
      '}',
    ),
    record_component: $ => seq(
      field('type', $.value_type),
      field('name', $.identifier),
    ),

    variant_declaration: $ => seq(
      'variant',
      field('name', $.identifier),
      '{',
      repeat1($.variant_case_declaration),
      '}',
    ),
    variant_case_declaration: $ => seq(
      'case',
      field('name', $.identifier),
      '(',
      optional(seq($.record_component, repeat(seq(',', $.record_component)))),
      ')',
      ';',
    ),

    enum_declaration: $ => seq(
      'enum',
      field('name', $.identifier),
      '{',
      repeat1($.enum_case),
      '}',
    ),
    enum_case: $ => seq(
      'case',
      field('name', $.identifier),
      ';',
    ),

    constant_declaration: $ => seq(
      'const',
      field('type', choice('long', 'boolean')),
      field('name', $.identifier),
      '=',
      field('value', $.constant_expression),
      ';',
    ),
    constant_expression: $ => $.expression,

    theorem_declaration: $ => seq(
      'theorem',
      field('name', $.identifier),
      'proves',
      choice(
        seq(
          field('rule', choice('inverse', 'adjoint')),
          '(', field('subject', $.identifier), ')',
        ),
        seq(
          field('rule', 'equivalent'),
          '(',
          field('subject', $.identifier),
          ',',
          field('related_subject', $.identifier),
          ')',
        ),
        seq(
          field('rule', 'steps'),
          '(',
          field('subject', $.identifier),
          ',',
          field('bound', $.constant_expression),
          ')',
        ),
      ),
      ';',
    ),

    state_declaration: $ => seq(
      'state',
      'long',
      field('name', $.identifier),
      '=',
      field('value', $.constant_expression),
      ';',
    ),

    qreg_declaration: $ => seq(
      'qreg',
      field('name', $.identifier),
      '=',
      'new',
      'qreg',
      '(',
      field('size', $.constant_expression),
      ')',
      ';',
    ),

    method_declaration: $ => seq(
      repeat($.method_modifier),
      field('return_type', choice('void', $.value_type)),
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      optional(field('cases', $.test_case_list)),
      optional(field('tags', $.test_tag_list)),
      optional(field('limits', $.test_limit_list)),
      optional(field('fixtures', $.test_fixture_list)),
      field('body', $.block),
    ),

    visibility_modifier: _ => choice('public', 'private', 'protected'),
    method_modifier: _ => choice(
      'static', 'entry', 'test', 'rev', 'coherent', 'unitary', 'dynamic',
    ),
    parameter_list: $ => seq(
      '(',
      optional(seq($.parameter, repeat(seq(',', $.parameter)))),
      ')',
    ),
    test_case_list: $ => seq(
      'cases',
      '(',
      optional(seq($.test_case, repeat(seq(',', $.test_case)))),
      ')',
    ),
    test_case: $ => choice(
      seq(optional('-'), $.integer_literal),
      'true',
      'false',
    ),
    test_tag_list: $ => seq(
      'tags',
      '(',
      optional(seq($.test_tag, repeat(seq(',', $.test_tag)))),
      ')',
    ),
    test_tag: $ => seq($.identifier, repeat(seq('.', $.identifier))),
    test_limit_list: $ => seq(
      'limits',
      '(',
      'steps',
      '=',
      field('steps', $.integer_literal),
      ',',
      'history',
      '=',
      field('history', $.integer_literal),
      ')',
    ),
    test_fixture_list: $ => seq(
      'fixtures',
      '(',
      'suite_acquire', '=', field('suite_acquire', $.identifier), ',',
      'case_acquire', '=', field('case_acquire', $.identifier), ',',
      'case_release', '=', field('case_release', $.identifier), ',',
      'suite_release', '=', field('suite_release', $.identifier),
      ')',
    ),
    value_type: $ => seq(
      choice(
        'long', 'boolean', 'Done', 'region', 'words', 'bytes', 'byteview', 'longmap', 'utf8',
        $.slot_type,
        alias($.identifier, $.type_identifier),
        $.qualified_type,
      ),
      optional($.array_extent),
    ),
    slot_type: $ => seq(
      'Slot',
      '<',
      field('payload', $.value_type),
      '>',
    ),
    array_extent: $ => seq('[', optional(field('length', $.integer_literal)), ']'),
    parameter: $ => seq(
      optional(field('ownership', $.parameter_ownership)),
      field('type', $.value_type),
      field('name', $.identifier),
    ),
    parameter_ownership: _ => choice('borrow', seq('borrow', 'mut')),
    block: $ => seq('{', repeat($.statement), '}'),

    statement: $ => choice(
      $.local_declaration,
      $.assignment_statement,
      $.assert_statement,
      $.call_statement,
      $.coherent_apply_statement,
      $.reverse_statement,
      $.if_statement,
      $.while_statement,
      $.for_statement,
      $.match_statement,
      $.break_statement,
      $.continue_statement,
      $.return_statement,
    ),

    match_statement: $ => seq(
      'match',
      '(',
      field('value', $.expression),
      ')',
      '{',
      repeat1($.match_case),
      '}',
    ),
    match_case: $ => seq(
      'case',
      field('type', $.value_type),
      '.',
      field('case', $.identifier),
      field('bindings', $.parameter_list),
      field('body', $.block),
    ),

    return_statement: $ => seq('return', $.expression, ';'),
    break_statement: _ => seq('break', ';'),
    continue_statement: _ => seq('continue', ';'),

    local_declaration: $ => seq(
      field('type', $.value_type),
      field('name', $.identifier),
      '=',
      field('value', $.expression),
      ';',
    ),

    if_statement: $ => seq(
      'if',
      '(',
      field('condition', $.expression),
      ')',
      field('consequence', $.block),
      optional(seq('else', field('alternative', $.block))),
    ),

    for_statement: $ => seq(
      'for',
      '(',
      field('initializer', $.local_declaration),
      field('condition', $.expression),
      ';',
      field('update', $.assignment_expression),
      ')',
      'limit',
      field('limit', $.expression),
      field('body', $.block),
    ),
    assignment_expression: $ => seq(
      field('target', $.identifier),
      field('operator', choice('=', '+=', '-=', '^=')),
      field('value', $.expression),
    ),

    while_statement: $ => seq(
      'while',
      '(',
      field('condition', $.expression),
      ')',
      'limit',
      field('limit', $.expression),
      field('body', $.block),
    ),

    assignment_statement: $ => seq(
      field('left', $.identifier),
      field('operator', choice('=', '+=', '-=', '^=')),
      field('right', $.expression),
      ';',
    ),

    assert_statement: $ => seq('assert', '(', $.expression, ')', ';'),
    call_statement: $ => seq($.call_expression, ';'),
    coherent_apply_statement: $ => seq(
      field('register', $.identifier),
      '.',
      'apply',
      '(',
      field('method', $.identifier),
      ')',
      ';',
    ),
    reverse_statement: $ => seq('reverse', choice($.block, seq($.call_expression, ';'))),

    expression: $ => choice(
      $.boolean_literal,
      'done',
      $.integer_literal,
      $.number_literal,
      $.ascii_literal,
      $.identifier,
      $.call_expression,
      $.record_creation,
      $.field_expression,
      $.array_access_expression,
      $.parenthesized_expression,
      $.unary_expression,
      $.binary_expression,
    ),
    parenthesized_expression: $ => seq('(', $.expression, ')'),
    unary_expression: $ => prec(8, seq(
      field('operator', choice('!', '-')),
      field('operand', $.expression),
    )),
    binary_expression: $ => choice(
      prec.left(1, seq($.expression, field('operator', choice('==', '!=')), $.expression)),
      prec.left(2, seq($.expression, field('operator', '<'), $.expression)),
      prec.left(3, seq($.expression, field('operator', '^'), $.expression)),
      prec.left(4, seq($.expression, field('operator', '&'), $.expression)),
      prec.left(5, seq($.expression, field('operator', choice('+', '-')), $.expression)),
      prec.left(6, seq($.expression, field('operator', choice('*', '/', '%')), $.expression)),
    ),
    record_creation: $ => seq(
      'new',
      field('type', $.value_type),
      optional(seq('.', field('case', $.identifier))),
      '(',
      optional($.argument_list),
      ')',
    ),
    field_expression: $ => prec(7, seq(
      field('value', $.expression),
      '.',
      field('field', $.identifier),
    )),
    array_access_expression: $ => prec(7, seq(
      field('array', $.expression),
      '[',
      field('index', $.expression),
      ']',
    )),
    call_expression: $ => seq(
      field('function', choice($.identifier, $.qualified_function)),
      '(',
      optional($.argument_list),
      ')',
    ),
    qualified_function: _ => token(
      /[A-Za-z_][A-Za-z0-9_]*(?:\.[A-Za-z_][A-Za-z0-9_]*)*::[a-z_][A-Za-z0-9_]*/,
    ),
    qualified_type: _ => token(
      /[A-Za-z_][A-Za-z0-9_]*(?:\.[A-Za-z_][A-Za-z0-9_]*)*::[A-Z][A-Za-z0-9_]*/,
    ),
    argument_list: $ => seq($.expression, repeat(seq(',', $.expression))),

    boolean_literal: _ => choice('true', 'false'),
    integer_literal: _ => token(choice(
      /[0-9][0-9_]*/,
      /0[xX][0-9a-fA-F][0-9a-fA-F_]*/,
      /0[bB][01][01_]*/,
    )),
    number_literal: _ => token(/[0-9][0-9_]*\.[0-9][0-9_]*(?:[eE][+-]?[0-9]+)?/),
    ascii_literal: _ => token(/"[\x20-\x21\x23-\x7e]*"/),
    type_identifier: _ => /[A-Za-z_][A-Za-z0-9_]*/,
    identifier: $ => choice($._identifier_word, 'reverse'),
    _identifier_word: _ => /[A-Za-z_][A-Za-z0-9_]*/,
    line_comment: _ => token(seq('//', /[^\n]*/)),
    block_comment: _ => token(seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/')),
  },
});
